--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="comment__info">
               <a href="#">Like</a>
               <a href="#">4 replies</a>
-              <span class="likeability">2 likes</span>
+              <span>2 likes</span>
               Yesterday at 10:00am
             </div>
 
